<resources>
    <string name="app_name">The Philo Swap</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_please_wait">Loading...please wait...</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="keywords_philosophy_political_economy_politics_etc">Keywords (Philosophy, Political Economy, Politics, etc.)</string>
    <string name="description_optional">Description (optional)</string>
    <string name="add_book">Add Book</string>
    <string name="swap">Swap</string>
    <string name="cancel">Cancel</string>
    <string name="add_your_book">Add your book</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create account</string>
    <string name="reset_password">Reset Password</string>
    <string name="name">Name</string>
    <string name="reset">Reset</string>
    <string name="keywords">Keywords</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="create_account2">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="register">Register</string>
    <string name="please_enter_your_postal_address">Please enter your postal address*</string>
    <string name="please_enter_your_phone_number_optional">Please enter your phone number (optional)*</string>
    <string name="request_book">Request Book</string>
    <string name="we_won_t_save_or_use_your_address_or_phone_number_this_information_will_be_emailed_to_the_book_owner_so_they_can_send_the_book_to_you_we_recommend_adding_your_phone_number_to_coordinate_any_extra_details_with_the_book_owner">*We won\'t save or use your address or phone number, this information will be emailed to the book owner so they can send the book to you. We recommend adding your phone number to coordinate any extra details with the book owner.</string>
    <string name="the_philo_swap">The Philo Swap</string>
    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="my_books">My Books</string>
    <string name="sign_out">Sign Out</string>
</resources>